--- a/src/index.css
+++ b/src/index.css
@@ -46,11 +46,15 @@ body {
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 31vh;
-  max-width: 600px;
-  height: 45vh;
+  width: 350px;
+  max-width: 500px;
+  height: 500px;
   max-height: 570px;
   will-change: transform;
   border-radius: 10px;
   box-shadow: 0 12.5px 20px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+}
+
+div > div:hover {
+  transform:scale(2);
 }
