--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Goblin+One&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -22,8 +24,6 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39, auto;
-  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,15 +46,23 @@ body {
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 350px;
-  max-width: 500px;
-  height: 500px;
-  max-height: 570px;
+  width: 250px;
+  max-width: 430px;
+  height: 360px;
+  max-height: 360px;
   will-change: transform;
   border-radius: 10px;
   box-shadow: 0 12.5px 20px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+  cursor: pointer;
 }
 
-div > div:hover {
-  transform:scale(2);
+h1 {
+  z-index: 200;
+  color: black;
+  position: absolute;
+  text-align: center;
+  left: 0;
+  right: 0;
+  font-size: 6.5em;
+  font-family: 'Goblin One', cursive;
 }
